// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withNodesToProps 1`] = `
<DocumentFragment>
  <div>
    stuff 123 true
  </div>
</DocumentFragment>
`;

exports[`withNodesToProps 2`] = `
<DocumentFragment>
  <div>
    stuff, stuff, stuff 123123123 true
  </div>
</DocumentFragment>
`;
